			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.01aa: *********************************

************************* Version 8.01z: *********************************

BUG: (10/19/04, GVG) Library Read errors give null exception.
FIX: Test if highlighter != null in ErrorLogger

IMP: (10/19/04, GVG) StringBuffer instead of String for loops (findBugs source).

BUG: (10/19/04, SMR) JELIB input creates extra exports in icons.
FIX: When JELIB input creates an export, disallow creation of associated icon export.

BUG: (10/19/04, SMR) Cannot place cell instances.
FIX: In "PaletteFrame.java", allow all NodeProto placements, not just PrimitiveNode.

************************* Version 8.01y: *********************************
BUG: (10/18/04, GVG) Rounding error in DRC min width checking
FIX: DBMath.isGreater() function added to consolidate comparison and rounding operations

IMP: (10/18/04, GVG) Parasitic tab skeleton in Preferences. Corresponding html/png files were added for manual. All
tools-related figures were redone.

IMP: (10/18/04, GVG) New look&feel of WellCheck dialog (documentation changed).
3DView: Ability to turn on/off antialiasing without closing 3D window.
Changes in diffuse, specular and ambient colors. Parasitic: arc cropping added.
Code optimization in DBMath.round and DBMath.pointInRect. Code cleaning in Constraint.Layout.
Job.checkExamine() disabled.

IMP: (10/18/04, SMR) Specifying libraries on the command line handles both ELIB and JELIB format.

BUG: (10/18/04, SMR) JELIB input damages quoted strings.
FIX: Fixed input module (so JELIB files are fine, reader was bad).

************************* Version 8.01x: *********************************

IMP: (10/15/04, SMR) Spice plotting allows partial files.

IMP: (10/15/04, SMR) Waveform window handles "Fill Window" properly.

IMP: (10/15/04, SMR) Waveform window can highlight individual sweeps.
