@@ -273,7 +273,7 @@ public class EvalJavaBsh
             targetErrorClass = Class.forName("bsh.TargetError");
         } catch (ClassNotFoundException e)
         {
-            System.out.println("Can't find the Bean Shell: " + e.getMessage());
+            System.out.println("GNU Release can't find the Bean Shell: " + e.getMessage());
             interpreterClass = null;
             return;
         }
